Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-73061

multiple QtWidgets.qApp.lastWindowClosed signals emitted when using native child widgets or QGLWidget

    XMLWordPrintable

Details

    • Linux/X11, Windows
    • b782004149610d5c6af27e12d788acfb213b84d0 (qt/qtbase/5.12)

    Description

      QtWidgets.qApp.lastWindowClosed is emited several times when using QGLWidget in a QMainWindow. The problem is worse if using a QGLWidget in a QDockWidget .
      See the attached code.

      5.12.2 windows/Windows 10 (10.0) ()
      # 0 lastWindowClosed
      # 1 lastWindowClosed
      # 2 lastWindowClosed
      # 3 lastWindowClosed
      # 4 lastWindowClosed
      

      Attachments

        1. pb_lastWindowClosed_pyside2.py
          0.8 kB
        2. pyside910.py
          0.8 kB
        3. qtbug73061_diag.diff
          3 kB
        4. qtbug73061_log.txt
          3 kB
        5. qtbug73061.zip
          2 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            qt.team.quick.subscriptions Qt Quick and Widgets Team
            guilbut baptiste de la gorce
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes