Fix multiple emission of QGuiApplication::lastWindowClosed() when native child widgets are used

Run the handling in QWindowPrivate::maybeQuitOnLastWindowClosed()
for top level windows only.

Fixes: QTBUG-73061
Change-Id: I74deb50b06a64e8ef0e438d2abf14888f778a46e
Reviewed-by: Tor Arne Vestbø <tor.arne.vestbo@qt.io>
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>